# LABRA-AGU

./: .gitignore  README.md  build.py  consulta.py  directive.py  ingest.py  main.py  pipeline.py  pyproject.toml  pytest.ini  relatorio.py  requirements.txt  serve.py  sources.example.json  test_daemon.py  test_graph_timeline.py  test_integration.py  test_multibank.py  test_phase2_capture.py  test_phase2_memory.py  test_phase2_nexo.py  test_phase2_theory.py  test_pipeline.py
agent/: act_r.py  agent_loop.py  anomaly_engine.py  asset_shield.py  case_memory.py  causal_chain.py  client.py  counterfactual.py  coverage.py  daemon.py  entities.py  entity_resolution.py  evidence_scorer.py  feedback.py  graph.py  graph_timeline.py  heraclitus_pb2.py  heraclitus_pb2_grpc.py  investigator.py  legal_mapper.py  litigator.py  llm.py  llm_parser.py  network_analysis.py  orchestrator.py  parser.py  patterns.py  reader.py  recovery.py  report.py  testing.py  theory_builder.py
dashboard/: package-lock.json
demo/: README.md  TUTORIAL_DEMO.md  adicionar_caso.py  demo_agente.py  demo_antedatacao.py  demo_fase3.py  gerar_cenario.py  gerar_complexos.py  gerar_mega.py  nomes.py  report_html.py  run.py  sources.json
docs/: LABRA_AGENT_SPEC.md  ROTEIRO_VIDEO_NOTEBOOKLM.md  ROTEIRO_VIDEO_PITCH_3MIN.md  TUTORIAL.md  VIDEO_SCRIPT_NOTEBOOKLM_EN.md
evaluation/: harness.py  run_eval.py  scenarios.py
tests/: conftest.py  test_agent_loop.py  test_client_scan.py  test_coverage.py  test_entities.py  test_eval_gate.py  test_multidoc.py  test_parser_patterns.py  test_phase2.py  test_phase3.py
(+18 files in other folders)
